--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 
 body{
+    background-image: linear-gradient(90deg, #7d5fff,#7158e2 );
     font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: column;
@@ -14,4 +15,41 @@ body{
     height: 100vh;
     overflow: hidden;
     margin: 0;
+}
+.search{
+    position: relative;
+    height: 50px;
+}
+.search .input  {
+    background-color: #fff;
+    border: 0;
+    font-size: 18px;
+    padding: 15px;
+    width: 50px;
+    transition: width 0.3s ease;
+}
+
+.btn{
+    background-color: #fff;
+    border: 0;
+    font-size: 24px;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 50px;
+    width: 50px;
+    transition: transform 0.3s ease;
+}
+
+.btn:focus,.input:focus{
+    outline: none;
+}
+
+.search.active .input{
+    width: 200px;
+}
+
+.saerch.active .btn{
+    transform: translateX(198px);
 }
